Fix Victory scene and some concurrency bug

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -3,7 +3,7 @@ name = PropertiesConfig
 appender.console.type = Console
 appender.console.name = consoleLogger
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = [%d{EEE yyyy-MM-dd HH:mm:ss}] [%t] [%p] %c{1}-%M:%L - %m%n
+appender.console.layout.pattern = [%d{EEE yyyy-MM-dd HH:mm:ss}] [%p] [%t] %c{1}-%M:%L - %m%n
 
 rootLogger.level = debug
 rootLogger.appenderRef.stderr.ref = consoleLogger
