--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -5,5 +5,5 @@ appender.console.name = consoleLogger
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = [%d{EEE yyyy-MM-dd HH:mm:ss}] [%p] [%t] %c{1}-%M:%L - %m%n
 
-rootLogger.level = debug
+rootLogger.level = trace
 rootLogger.appenderRef.stderr.ref = consoleLogger
